voucherify-code-redemption

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,12 @@
           <h4>Subtotal<span id="subtotal">$135.85</span></h4>
           <h4>Shipping<span>Calculated at next step</span></h4>
           <h4>Coupon Codes:</h4>
+          <div class="voucher-examples">
+            <span>BLCKFRDY (10% off)</span>
+            <span>HAPPY-ORDERxq7 (20% off)</span>
+            <span>HAPPY-ORDERyra (20% off)</span>
+            <span>HAPPY-ORDER11T (20% off)</span>
+          </div>
           <div class="voucher-input-and-button-holder">
             <form>
               <input
