addded FREE SHIPPING code

--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
             <span>BLCKFRDY (10% off)</span>
             <span>HAPPY-ORDERxq7 (20% off)</span>
             <span>HAPPY-ORDERyra (20% off)</span>
-            <span>HAPPY-ORDER11T (20% off)</span>
+            <span>FREE SHIPPING (Free shipping)</span>
           </div>
           <div class="voucher-input-and-button-holder">
             <form>
