--- a/client/checkout.html
+++ b/client/checkout.html
@@ -127,6 +127,6 @@
 	src="https://unpkg.com/@voucherify/sdk/dist/voucherifysdk.umd.production.min.js"
 	crossorigin
 ></script>
-        <script src="./js/script.js"></script>
+        <script src="./js/checkout.js"></script>
     </body>
 </html>
