refactoring back(then/catch => await) / front (main logic in on file)

--- a/client/checkout.html
+++ b/client/checkout.html
@@ -48,20 +48,20 @@
                     <div class="adress-info">
                         <h5>Shipping adress</h5>
                         <label for="fullname">
-                            <input type="name" id="fullname" placeholder="Full Name">
+                            <input type="name" id="fullname" name="Patryk">
                         </label>
                         <label for="company">
-                            <input type="text" id="company" placeholder="Company (Optional)">
+                            <input type="text" id="company">
                         </label>
                         <label for="adress">
-                            <input type="text" id="adress" placeholder="Adress">
+                            <input type="text" id="adress">
                         </label>
                         <div class="city-properties">
                             <label for="postal">
-                                <input type="text" id="postal" placeholder="Postal Code">
+                                <input type="text" id="postal">
                             </label>
                             <label for="city">
-                                <input type="text" id="city" placeholder="City">
+                                <input type="text" id="city">
                             </label>
                         </div>
                         <label for="countries" class="countries">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="nav-buttons">
-                        <button>Complete order</button>
+                        <button type="button">Complete order</button>
                         <a href="index.html"><span><img src="./images/rightArrow.svg" alt="Return to cart"></span>Return to cart</a>
                     </div>
 
@@ -127,6 +127,7 @@
 	src="https://unpkg.com/@voucherify/sdk/dist/voucherifysdk.umd.production.min.js"
 	crossorigin
 ></script>
-        <script src="./js/checkout.js"></script>
+        <script type="module" src="./js/services.js"></script>
+        <script type="module" src="./js/index.js"></script>
     </body>
 </html>
