--- a/client/index.html
+++ b/client/index.html
@@ -65,8 +65,7 @@
           </div>
           <div class="promotions-holder">
             <h4>Promotions:</h4>
-            <div id="promotion-holder"" class="promotion-holder">
-            </div>
+            <div id="promotion-holder" class="promotion-holder"></div>
           </div>
           <h4 class="discount-price-holder">
             All Your Discounts:<span id="all-discounts">n/a</span>
@@ -128,6 +127,6 @@
 	src="https://unpkg.com/@voucherify/sdk/dist/voucherifysdk.umd.production.min.js"
 	crossorigin
 ></script>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
