--- a/client/index.html
+++ b/client/index.html
@@ -54,14 +54,14 @@
             <span>FREE SHIPPING (Free shipping)</span>
           </div>
           <div class="voucher-input-and-button-holder">
-            <form>
+            <form id="voucher-code-form">
               <input
                 id="voucher-code"
                 type="text"
                 placeholder="Enter your code"
               />
+              <button type="submit" ><img src="./images/rightArrow.svg" alt="Right Arrow"></button>
             </form>
-            <button id="check-voucher-code"><img src="./images/rightArrow.svg" alt="Right Arrow"></button>
           </div>
           <div class="promotions-holder">
             <h4>Promotions:</h4>
