--- a/client/checkout.html
+++ b/client/checkout.html
@@ -36,7 +36,7 @@
                             <p>Already have an account? <span>Log in</span></p>
                         </div>
                         <label for="ephone">
-                            <input type="text" id="ephone" placeholder="Email or phone number">
+                            <input type="text" id="ephone" placeholder="Email or phone number" value="voucherify@sample.io">
                         </label>
                         <div class="contact-checkbox">
                             <label for="news">
@@ -48,20 +48,20 @@
                     <div class="adress-info">
                         <h5>Shipping adress</h5>
                         <label for="fullname">
-                            <input type="name" id="fullname" name="Patryk">
+                            <input type="name" id="fullname" value="Jack Smith">
                         </label>
                         <label for="company">
-                            <input type="text" id="company">
+                            <input type="text" id="company" value="Voucherify">
                         </label>
                         <label for="adress">
-                            <input type="text" id="adress">
+                            <input type="text" id="adress" value="Magic Street 10">
                         </label>
                         <div class="city-properties">
                             <label for="postal">
-                                <input type="text" id="postal">
+                                <input type="text" id="postal" value="11-130">
                             </label>
                             <label for="city">
-                                <input type="text" id="city">
+                                <input type="text" id="city" value="Warsaw">
                             </label>
                         </div>
                         <label for="countries" class="countries">
@@ -127,7 +127,6 @@
 	src="https://unpkg.com/@voucherify/sdk/dist/voucherifysdk.umd.production.min.js"
 	crossorigin
 ></script>
-        <script type="module" src="./js/services.js"></script>
-        <script type="module" src="./js/index.js"></script>
+        <script type="module" src="./js/checkout.js"></script>
     </body>
 </html>
