--- a/client/checkout.html
+++ b/client/checkout.html
@@ -48,20 +48,20 @@
                     <div class="adress-info">
                         <h5>Shipping adress</h5>
                         <label for="fullname">
-                            <input type="name" id="fullname" name="Patryk">
+                            <input type="name" id="fullname" value="Jack Smith">
                         </label>
                         <label for="company">
-                            <input type="text" id="company">
+                            <input type="text" id="company" value="Voucherify">
                         </label>
                         <label for="adress">
-                            <input type="text" id="adress">
+                            <input type="text" id="adress" value="Magic Street 10">
                         </label>
                         <div class="city-properties">
                             <label for="postal">
-                                <input type="text" id="postal">
+                                <input type="text" id="postal" value="11-130">
                             </label>
                             <label for="city">
-                                <input type="text" id="city">
+                                <input type="text" id="city" value="Katowice">
                             </label>
                         </div>
                         <label for="countries" class="countries">
@@ -127,7 +127,6 @@
 	src="https://unpkg.com/@voucherify/sdk/dist/voucherifysdk.umd.production.min.js"
 	crossorigin
 ></script>
-        <script type="module" src="./js/services.js"></script>
-        <script type="module" src="./js/index.js"></script>
+        <script type="module" src="./js/checkout.js"></script>
     </body>
 </html>
