added PORT variable to .env.example && getting email to customer obj

--- a/client/checkout.html
+++ b/client/checkout.html
@@ -36,7 +36,7 @@
                             <p>Already have an account? <span>Log in</span></p>
                         </div>
                         <label for="ephone">
-                            <input type="text" id="ephone" placeholder="Email or phone number">
+                            <input type="text" id="ephone" value="jacksmith@test.com">
                         </label>
                         <div class="contact-checkbox">
                             <label for="news">
