added .env PORT 3000 / added link to repo

--- a/client/index.html
+++ b/client/index.html
@@ -119,7 +119,7 @@
           <a href="#"></a>
           <a href="#"></a>
         </div>
-        <p class="copyright-holder">© 2022 voucherify</p>
+        <!-- <p class="copyright-holder">© 2022 voucherify</p> -->
       </div>
       <div class="footer-right-holder">
         <ul>
@@ -140,6 +140,10 @@
           <li>Privacy Policies</li>
           <li>Terms & Conditions</li>
         </ul>
+      </div>
+      <div class="product-info">
+        <p class="copyright-holder">© 2022 voucherify</p>
+        <a id="repo-link" target="_blank" href="https://github.com/voucherify-samples/voucher-code-redemption">https://github.com/voucherify-samples/voucher-code-redemption</a>
       </div>
     </footer>
     <script
